@@ -21,6 +21,7 @@
 
 /* International translations; must appear first */
 
+/* TODO: Please translate the category names, somebody. */
 
 TRANSLATION "en"
 BEGIN 
@@ -448,26 +449,6 @@ BEGIN
 END
 
 
-ALERT ID MemDebugFailedAlert
-ERROR
-BEGIN
-	TITLE "Error"
-
- 	MESSAGE "Error setting memory debug mode: ^1"
-	BUTTONS "OK"
-END
-
-
-ALERT ID MemDebugSetAlert
-CONFIRMATION
-BEGIN
-	TITLE "MemDebug Set"
-
-	MESSAGE "Memory debug flags set to: ^1"
-	BUTTONS "Yow!"
-END
-
-
 ALERT ID UpgradeAlert
 CONFIRMATION
 BEGIN
@@ -579,17 +560,6 @@ BEGIN
 		MENUITEM "Preferences..." ID PrefsCmd "P"
 		MENUITEM "About GNU Keyring" ID AboutCmd "A"
 	END
-
-	PULLDOWN "\xa4"
-	BEGIN
-		MENUITEM "CheckOnChange" ID MemCheckOnChangeCmd
-		MENUITEM "CheckOnAll" ID MemCheckOnAllCmd
-		MENUITEM "ScrambleOnChange" ID MemScrambleOnChangeCmd
-		MENUITEM "ScrambleOnAll" ID MemScrambleOnAllCmd
-		MENUITEM "FillFree" ID MemFillFreeCmd
-		MENUITEM "AllHeaps" ID MemAllHeapsCmd
-		MENUITEM "RecordMinDynHeapFree" ID MemRecordMinDynHeapFreeCmd 
-	END
 END
 
 
@@ -621,17 +591,6 @@ BEGIN
 		MENUITEM "Preferences..." ID PrefsCmd "R"
 		MENUITEM "Tips..."	ID HelpCmd
 		MENUITEM "About GNU Keyring" ID AboutCmd
-	END
-
-	PULLDOWN "\xa4"
-	BEGIN
-		MENUITEM "CheckOnChange" ID MemCheckOnChangeCmd
-		MENUITEM "CheckOnAll" ID MemCheckOnAllCmd
-		MENUITEM "ScrambleOnChange" ID MemScrambleOnChangeCmd
-		MENUITEM "ScrambleOnAll" ID MemScrambleOnAllCmd
-		MENUITEM "FillFree" ID MemFillFreeCmd
-		MENUITEM "AllHeaps" ID MemAllHeapsCmd
-		MENUITEM "RecordMinDynHeapFree" ID MemRecordMinDynHeapFreeCmd 
 	END
 END
 
